--- a/YeahBoy/YeahBoy.vcxproj
+++ b/YeahBoy/YeahBoy.vcxproj
@@ -94,6 +94,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -108,6 +109,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -118,7 +120,6 @@
     <ClCompile Include="Bus.cpp" />
     <ClCompile Include="Cartridge.cpp" />
     <ClCompile Include="CPU.cpp" />
-    <ClCompile Include="DebugConsole.cpp" />
     <ClCompile Include="HRAM.cpp" />
     <ClCompile Include="YeahBoy.cpp" />
     <ClCompile Include="main.cpp" />
@@ -130,7 +131,6 @@
     <ClInclude Include="Bus.h" />
     <ClInclude Include="Cartridge.h" />
     <ClInclude Include="CPU.h" />
-    <ClInclude Include="DebugConsole.h" />
     <ClInclude Include="HRAM.h" />
     <ClInclude Include="YeahBoy.h" />
     <ClInclude Include="OAM.h" />
